# zz-8

./: .gitignore  .python-version  .zz-8.py.swp  Dockerfile  Jenkinsfile  LICENSE  Pipfile  README.md  db_init.py  docker-compose.yml  log.conf  pyproject.toml  re  requirements-dev.txt  requirements.txt  test-db-init.py  test.py  zz-8.py  zz-8.service  zz-8.yml  zz8.json
ansible/: zz-8.yml
ansible/files/: run
cogs/: admin.py  events.py  interests.py  music.py  reminders.py
config/: zz-8.cfg
docs/: conf.py  index.rst
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/doctrees/source/: db_init.doctree  modules.doctree  test-db-init.doctree  test-zz8.doctree  zz-8.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_sources/source/: modules.rst.txt  test-db-init.rst.txt
docs/_build/html/source/: db_init.html  modules.html  test-db-init.html  test-zz8.html  zz-8.html
docs/source/: db_init.rst  test-zz8.rst  zz-8.rst
tests/fixtures/: users.yaml
usage/: installation.rst
