[tool.poetry]
name = "zz-8"
version = "0.1.0"
description = ""
authors = ["Lance Zeligman"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
praw = "^7.7.1"
python-twitch-client = "^0.7.1"
SQLAlchemy = "^2.0.20"
pymongo = "^4.5.0"
youtube_dl = "^2021.12.17"
asyncio = "^3.4.3"
"discord.py" = "^2.3.2"
PTable = "^0.9.2"
dateparser = "^1.1.8"

[tool.poetry.group.dev.dependencies]
ipython = "^8.15.0"
flake8 = "^6.1.0"
black = "^23.9.1"
ansible = "^8.4.0"
pytest = "^7.4.2"
pytest-mongodb = "^2.4.0"
pylint = "^2.17.5"
sphinx = "^7.2.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
